complex_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: counter
spec:
  containers:
  - name: count
    image: busybox
    args:: 
    - /bin/sh
    - -c
    - >
      i=0;
      while true;
      do
        echo "$i: $(date)" >> /var/log/1.log;
        echo "$(date) INFO $i" >> /var/log/2.log;
        i=$((i+1));
        sleep 1;
      done
    volumeMounts:
    - name: empty-volume
      mountPath: /var/log
  - name: adapter
    image: k8s.gcr.io/fluentd-gcp:1.30
    volumeMounts:
    - name: config-volume
      mountPath: /fluentd/etc
    - name: empty-volume
      mountPath: /var/log
    - name: host-volume
      mountPath: /var/logout
  volumes:
  - name: FLUENTD_ARGS
  - name: config-volume
    configMap:
      name: fluentd-config
  - name: empty-volume
    emptyDir: {}
  - name: host-volume
    hostPath: 
      path: /usr/ckad/log_output
