creat_persistent_volume.yml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: my-pvc
spec:
  storageClassName: localdisk
  resources:
    requests:
      storage: 500Mi
  accessModes:
  - ReadWriteOnce

  ---
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh' '-c', 'echo success > /output/success.txt']
    volumeMounts:
    - name: pv-storage
      mountPath: /var/output
  volumes:
  - name: pv-storage
    persistentVolumeClaim:
      claimName: my-pvc
