liveness-command.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    livenessProbe:
    # executes a command inside of the container. 
    # if the command succeeds container is healthy
      exec:
        command: ['echo', 'I am healthy']
      initialDelaySeconds: 5 # waits for 5 seconds then starts probing
      periodSeconds: 5 # probes every 5 seconds on a schedule
