multi-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-pod
spec:
  containers:
  - name: legacy
    image: busybox
    #hard-coded to send its logs into a file inside the shared volume
    command: ['sh', '-c', 'while true; do echo logs data > /output/output.log; sleep 5; done']
    volumeMounts:
    - name: sharevolume
      mountPath: /output
  - name: sidecar
    image: busybox
    # reads legacy's logs from the shared volume space and can be then accessed in commandline using:
    # kubectl logs sidecar-pod -c sidecar
    command: ['sh', '-c', 'tail -f /input/output.log']
    volumeMounts:
    - name: sharedvolume
      mountPath: /input
  volumes:
  - name: sharedvolume
    emptyDir: {}
