ovych-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovych-deployment
  namespace: kubernetes-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: redis 
        image: redis
        ports:
        - containerPort: 80
