startup_probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: startup-pod
spec:
  containers:
  - name: nginx
    image: nginx
    startupProbe:
      httpGet:
        path: /
        port: 80
      failureThreshold: 30 #asks startupProbe to wait a bit longer (great for legacy apps)
      periodSeconds: 10
