external-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: external-service
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30000
