ovych-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ovych-internal
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
