services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: container
        image: nginx:1.19.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: my-volume
          mountPath: /etc/storage
      volumes:
      - name: my-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort 
  selector: 
    app: example-app
  ports:
  - protocol: TCP
    port: 80
    #can be left out and k8s will choose a high number port randomly
    nodePort: 30001
    targetPort: 80
