ingress-service-http.yaml
apiVersion: v1
kind: Ingress 
metadata:
  name: myapp-ingress-http
spec:
  rules: 
  - host: myapp.com 
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080
---

apiVersion: extensions/v1beta1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
#resource backend. CANNOT come with service backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-ingress
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: my-assets
rules:
- host: example.com
  http:
    paths:
    - path: /somepath
      pathType: Prefix
      backend:
        resource:
          apiGroup: k8s.example.com
          kind: StorageBucket
          name: my-bucket
