my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /somepath
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80 #using port number
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /anotherPath
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              name: http #using port name (if the service uses name)
      - path: /anyPath
        pathType: Prefix
        backend:
          service:
            serviceName: service
            servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
spec:
  rules:
  - host: support.holdings.co.uk
    http:
      paths:
      - backend:
          serviceName: service
          servicePort: 80
  - host: buy.holdings.co.uk
    http:
      paths:
      - backend:
          serviceName: another-service
          servicePort: 80
---
